--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 pendulum = "*"
 requests = "*"
 pytest = "*"
-retry = "*"
+python-jose = {extras = ["cryptography"],version = "*"}
 
 [requires]
 python_version = "3.6"
