--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,12 @@ name = "VacasaConnect"
 version = "4.13.1"
 description = ""
 authors = []
-packages = [{ include = "vacasa" }]
+packages = [{ include = "vacasa/connect" }]
+
+[tool.poetry.dependencies]
+python = "^3.6"
+
+[tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry>=0.12"]
