--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pendulum = "*"
+pendulum = ">=3.0.0"
 requests = "*"
 pytest = "*"
 python-jose = {extras = ["cryptography"],version = "*"}
